Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -160,7 +160,7 @@ footer {
 		}
 	header {
 		float: none;
-		margin: 0px;
+		margin: 50px 0 0 0;
 		padding: 0px;
 		top: 0px;
 		width: auto;
